On login-form.ejs, changed legend to page-header. And other small changes.

--- a/views/login-form.ejs
+++ b/views/login-form.ejs
@@ -1,8 +1,11 @@
 <% layout('../views/layout') -%>
 
+<div class="page-header">
+	<h1>Log In</h1>
+</div>
+
 <form method="post" action="/login" role="form">
     <fieldset>
-        <legend>Log In</legend>
 		<div class="alert alert-success" style="display: <%=resetDisplay%>;">
 			<strong>Your password has been reset successfully!</strong> You may now log in with your new password.
 		</div>
