--- a/views/seller-vehicles-page.ejs
+++ b/views/seller-vehicles-page.ejs
@@ -10,7 +10,7 @@
 	<h1>My Vehicles</h1>
 </div>
 
-<form id="items" action="/order/add" method="get">
+<form id="items" action="/orders/add" method="get">
 	<table class="table">
 		<thead>
 			<tr>
