Fixes #33. Removed horizontal borders from bank-account-details-page.ejs.

--- a/views/bank-account-details-page.ejs
+++ b/views/bank-account-details-page.ejs
@@ -1,4 +1,5 @@
-<% layout('../../views/layout') -%>
+<% layout('../views/layout') -%>
+<% stylesheet('/static/css/bank-account-details-page.css') -%>
 
 <div class="page-header">
 	<h1>Banking Details</h1>
@@ -6,7 +7,7 @@
 
 <div class="alert alert-success" >
 	<button type="button" class="close" data-dismiss="alert">&times;</button>
-	<strong>Thank you for your order!</strong> Please deposit the required amount into the bank account below, using the reference number given. As soon as we have received your payment, the vehicle(s) will be advertised.
+	<strong>Thank you for your order!</strong> Please deposit tde required amount into tde bank account below, using tde reference number given. As soon as we have received your payment, tde vehicle(s) will be advertised.
 </div>
 
 <table class="table">
@@ -14,30 +15,28 @@
 		<tr>
 			<th><span class="pull-right">Amount due</span>&nbsp;&nbsp;</th>
 			<td>R&nbsp;<%=amountDue%>.00</td>
-		</tr>	
+		</tr>
 		<tr>
 			<th><span class="pull-right">Reference number</span>&nbsp;&nbsp;</th>
 			<td><%=referenceNumber%></td>
-		</tr>	
+		</tr>
 		<tr>
 			<th><span class="pull-right">Bank</span>&nbsp;&nbsp;</th>
 			<td>First National Bank</td>
-		</tr>	
+		</tr>
 		<tr>
 			<th><span class="pull-right">Branch (code)</span>&nbsp;&nbsp;</th>
 			<td>Hatfield (250111)</td>
-		</tr>	
+		</tr>
 		<tr>
 			<th><span class="pull-right">Account number</span>&nbsp;&nbsp;</th>
 			<td>3427785693920</td>
-		</tr>	
+		</tr>
 		<tr>
 			<th><span class="pull-right">Account name</span>&nbsp;&nbsp;</th>
 			<td>Bernadine Computing</td>
-		</tr>	
+		</tr>
 	</tbody>
 </table>
 
-<div class="form-actions" >
-	<a href="/seller/vehicles" class="btn btn-primary">My Orders</a>
-</div>
+<a href="/seller/vehicles" class="btn btn-primary">My Orders</a>
