--- a/views/password-forgot-form.ejs
+++ b/views/password-forgot-form.ejs
@@ -1,26 +1,25 @@
 <% layout('../views/layout') -%>
 
+<div class="page-header">
+	<h1>Forgotten Password</h1>
+</div>
+
 <form method="post" action="/password/forgot">
 	<fieldset>
-		<legend>Forgotten Password</legend>
-
 		<div class="alert alert-info" >
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
 			Please enter the email address with which you registered your account. A message will be sent to that
 			address, with instructions for resetting your password.
 		</div>
 
-		<div class="control-group <%=error.emailAlertType%>">
-			<label class="control-label">Email</label>
-			<div class="controls">
-				<input type="email" name="user[emailAddress]" value="<%=error.emailAddress%>"
-						required="required" />
-				<span class="help-block"><%=error.message%></span>
-			</div>
+		<div class="form-group <%=error.emailAlertType%>">
+			<label for="email" class="control-label">Email</label>
+			<input type="email" required
+				name="user[emailAddress]" value="<%=error.emailAddress%>"
+				id="email" class="form-control"
+			>
+			<span class="help-block"><%=error.message%></span>
 		</div>
 
-		<div class="controls" >
-			<button type="submit" class="btn btn-primary">Request Password Reset</button>
-		</div>
+		<button type="submit" class="btn btn-primary">Request Password Reset</button>
 	</fieldset>
 </form>
