--- a/views/password-reset-email-sent-page.ejs
+++ b/views/password-reset-email-sent-page.ejs
@@ -1,11 +1,14 @@
 <% layout('../views/layout') -%>
 
+<div class="page-header">
+	<h1>Email Sent</h1>
+</div>
+
 <form>
 	<fieldset>
-		<legend>Thank You!</legend>
 		<div class="alert alert-success" >
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
-			A message with instructions for resetting your password has been sent to your email address.
+			<strong>Thank you!</strong> A message with instructions for resetting your password has been sent to your
+			email address.
 		</div>
 
 	</fieldset>
