--- a/views/password-reset-form.ejs
+++ b/views/password-reset-form.ejs
@@ -1,35 +1,34 @@
 <% layout('../views/layout') -%>
 <% script('../../static/js/password-reset-form.js') -%>
 
+<div class="page-header">
+	<h1>Password Reset</h1>
+</div>
+
 <form id="reset" method="post" action="/password/reset">
 	<input type="hidden" name="user[emailAddress]" value="<%=emailAddress %>" />
 	<fieldset>
-		<legend>Password Reset</legend>
-
 		<div class="alert alert-info" >
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
 			Please enter a new password, and then confirm it.
 		</div>
 
-		<div id="divPassword" class="control-group">
-			<label class="control-label">New Password</label>
-			<div class="controls">
-				<input type="password" id="password" name="user[password]" required="required" />
-				<span id="spanPassword" class="help-block"></span>
-			</div>
+		<div id="divPassword" class="form-group">
+			<label for="password" class="control-label">New Password</label>
+			<input type="password" required
+				name="user[password]"
+				id="password" class="form-control"
+			>
+			<span id="spanPassword" class="help-block"></span>
 		</div>
 
-		<div id="divConfirmPassword" class="control-group">
+		<div id="divConfirmPassword" class="form-group">
 			<label class="control-label">Confirm Password</label>
-			<div class="controls">
-				<input type="password" id="confirmPassword" name="user[confirmPassword]"
-						required="required" />
-				<span id="spanConfirmPassword" class="help-block"></span>
-			</div>
+			<input type="password" required
+				name="user[confirmPassword]"
+				id="confirmPassword" class="form-control">
+			<span id="spanConfirmPassword" class="help-block"></span>
 		</div>
 
-		<div class="controls" >
-			<button type="submit" class="btn btn-primary">Reset Password</button>
-		</div>
+		<button type="submit" class="btn btn-primary">Reset Password</button>
 	</fieldset>
 </form>
