Corrected spelling errors on bank-account-details-page. These errors were introduced when doing search-and-replace on td and th elements.

--- a/views/bank-account-details-page.ejs
+++ b/views/bank-account-details-page.ejs
@@ -7,7 +7,7 @@
 
 <div class="alert alert-success" >
 	<button type="button" class="close" data-dismiss="alert">&times;</button>
-	<strong>Thank you for your order!</strong> Please deposit tde required amount into tde bank account below, using tde reference number given. As soon as we have received your payment, tde vehicle(s) will be advertised.
+	<strong>Thank you for your order!</strong> Please deposit the required amount into the bank account below, using the reference number given. As soon as we have received your payment, the vehicle(s) will be advertised.
 </div>
 
 <table class="table">
