--- a/views/vehicle-profile-page.ejs
+++ b/views/vehicle-profile-page.ejs
@@ -273,7 +273,7 @@ var colorRadio = 'red';
 <div class="row">
 	<div class="col-md-6">
 		<fieldset>
-			<legend>Seller <small><%=seller.type%></small></legend>
+			<legend>Seller <small><%=sellerType%></small></legend>
 
 			<div id="dealership" style="display: <%=dealerDisplay%>">
 				<span class="glyphicon glyphicon-home"> <strong><%=seller.dealershipName %></strong></span>
