--- a/views/bank-account-details-page.ejs
+++ b/views/bank-account-details-page.ejs
@@ -5,13 +5,16 @@
 	<h1>Banking Details</h1>
 </div>
 
+<% if (amountDue) { %>
 <div class="alert alert-success" >
 	<button type="button" class="close" data-dismiss="alert">&times;</button>
 	<strong>Thank you for your order!</strong> Please deposit the required amount into the bank account below, using the reference number given. As soon as we have received your payment, the vehicle(s) will be advertised.
 </div>
+<% } %>
 
 <table class="table">
 	<tbody>
+		<% if (amountDue) { %>
 		<tr>
 			<th><span class="pull-right">Amount due</span>&nbsp;&nbsp;</th>
 			<td>R&nbsp;<%=amountDue%>.00</td>
@@ -20,6 +23,7 @@
 			<th><span class="pull-right">Reference number</span>&nbsp;&nbsp;</th>
 			<td><%=referenceNumber%></td>
 		</tr>
+		<% } %>
 		<tr>
 			<th><span class="pull-right">Bank</span>&nbsp;&nbsp;</th>
 			<td>First National Bank</td>
@@ -39,4 +43,6 @@
 	</tbody>
 </table>
 
+<% if (amountDue) { %>
 <a href="/seller/vehicles" class="btn btn-primary">My Orders</a>
+<% } %>
