Vehicles list now shows which vehicles are part of pending orders.

--- a/views/cart-form.ejs
+++ b/views/cart-form.ejs
@@ -20,7 +20,9 @@
 			<tr>
 				<td><%=item.type.make%>&nbsp;<%=item.type.model%>&nbsp;<%=item.type.year%></td>
 				<td>
-					<select	name="item<%=i%>[weeks]" class="bootandbonnet-weeks span1" data-custom="<%=item._id%>"	>
+					<select name="item<%=i%>[weeks]" class="bootandbonnet-weeks span1" 
+						data-custom="<%=item._id%>"
+					>
 						<option>1</option>
 						<option>2</option>
 						<option>3</option>
