--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -47,12 +47,13 @@
 							<ul class="dropdown-menu">
 								<li><a href="/sellers/<%=seller._id%>/view">Profile</a></li>
 								<li><a href="/sellers/<%=seller._id%>/vehicles">Vehicles</a></li>
+								<li><a href="/sellers/<%=seller._id%>/orders">Orders</a></li>
 								<li class="divider"></li>
 								<li><a href="/?logout=true">Log out</a></li>
 							</ul>
 						</li>
 					<% } else { %>
-						<li><a href="/login">Login</a></li>
+						<li><a href="/users/login">Login</a></li>
 						<li><a href="/sellers/add">Register</a></li>
 					<% } %>
 					</ul>
