--- a/views/login-form.ejs
+++ b/views/login-form.ejs
@@ -4,7 +4,7 @@
 	<h1>Log In</h1>
 </div>
 
-<form method="post" action="/login" role="form">
+<form method="post" action="/users/login" role="form">
     <fieldset>
 		<div class="alert alert-success" style="display: <%=resetDisplay%>;">
 			<strong>Your password has been reset successfully!</strong> You may now log in with your new password.
